Fixing scroll setting overflow-y to auto

--- a/styles/css/login.css
+++ b/styles/css/login.css
@@ -48,7 +48,7 @@ main {
   align-content: center;
   justify-content: center;
   align-items: center;
-  overflow-y: scroll;
+  overflow-y: auto;
   height: inherit;
 }
 main form {
