--- a/styles/scss/cadastro.scss
+++ b/styles/scss/cadastro.scss
@@ -28,7 +28,7 @@ main {
     align-content: center;
     justify-content: center;
     align-items: center;
-    overflow-y: scroll;
+    overflow-y: auto;
     height: inherit;
 
     form {
